[gd_scene load_steps=37 format=3 uid="uid://yh4sseyibqfb"]

[ext_resource type="Script" path="res://design/modes/leaf/leafmaker_canvas.gd" id="1"]
[ext_resource type="Script" path="res://design/modes/leaf/leafmaker.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://c7yiqktg8rgig" path="res://design/modes/leaf/leaf_point.tscn" id="3_w3m6b"]
[ext_resource type="Texture2D" uid="uid://dmoscembmvgtc" path="res://design/crosshair.png" id="4"]
[ext_resource type="Script" path="res://design/modes/leaf/leafmaker_ui.gd" id="5"]
[ext_resource type="Texture2D" uid="uid://dpku2yu6uoroy" path="res://design/temp_vein_icon.png" id="5_rh8kf"]
[ext_resource type="Theme" uid="uid://buu3fgon4752m" path="res://design/theme/designer_tools_theme.tres" id="7"]
[ext_resource type="Script" path="res://design/modes/leaf/leaf_area.gd" id="7_5xsp6"]
[ext_resource type="Texture2D" uid="uid://b1r6b1l3mdxc6" path="res://design/ui/symmetry_dash_mini.png" id="8"]
[ext_resource type="Script" path="res://design/Math.gd" id="8_jcn1r"]
[ext_resource type="Texture2D" uid="uid://dfrapqr50au6w" path="res://design/modes/leaf/leaf_texture.png" id="9"]
[ext_resource type="Texture2D" uid="uid://dumwbunjhs2oy" path="res://design/ui/symmetry_shadow.png" id="11_fbcbf"]
[ext_resource type="Script" path="res://design/modes/leaf/coloring.gd" id="12_a3032"]
[ext_resource type="Script" path="res://design/ui/custom_toggle_icons.gd" id="12_it2pa"]
[ext_resource type="Texture2D" uid="uid://b7ys4cyy7u887" path="res://design/ui/symmetry_highlight.png" id="13_fi3m0"]
[ext_resource type="Texture2D" uid="uid://dnbu2cdn5efk5" path="res://design/modes/leaf/brush_circle_12.png" id="13_tcdno"]
[ext_resource type="Texture2D" uid="uid://dbkv1ntemxio1" path="res://design/modes/leaf/brush_circle_24.png" id="14_qxpf8"]
[ext_resource type="Texture2D" uid="uid://bq7y6wgfhqn3h" path="res://design/ui/coloring_mode_icon.png" id="14_uin86"]
[ext_resource type="Texture2D" uid="uid://ctwa633fuvfwu" path="res://design/modes/leaf/brush_circle_48.png" id="15_5l1ma"]
[ext_resource type="Texture2D" uid="uid://drleocmyk3cs4" path="res://design/ui/add_leafpoint.png" id="15_ur4ru"]
[ext_resource type="Texture2D" uid="uid://tohdr0r025tj" path="res://design/ui/add_leafpoint_highlight.png" id="16_0feru"]
[ext_resource type="Texture2D" uid="uid://bhs7f07t2fw80" path="res://design/ui/remove_leafpoint.png" id="17_qi3ng"]
[ext_resource type="Texture2D" uid="uid://b0uf3o25hpy3q" path="res://design/ui/remove_leafpoint_highlight.png" id="18_0032b"]
[ext_resource type="Texture2D" uid="uid://64c4t48pc03j" path="res://design/ui/move_leafpoint.png" id="19_svng3"]
[ext_resource type="Texture2D" uid="uid://cfw1bue4iv38h" path="res://design/ui/move_leafpoint_highlight.png" id="20_p7wbl"]
[ext_resource type="Texture2D" uid="uid://dhsmhdo672k6f" path="res://design/ui/check_mark.png" id="26_3glcn"]
[ext_resource type="Texture2D" uid="uid://cp27esikgrhw4" path="res://design/ui/brush_tip_small.png" id="27_0qvjx"]
[ext_resource type="Texture2D" uid="uid://dkbr3d1fwnbld" path="res://design/ui/brush_tip_small_selected.png" id="28_5hrpl"]
[ext_resource type="Texture2D" uid="uid://0gm008mp2dve" path="res://design/ui/brush_tip_med.png" id="29_358l8"]
[ext_resource type="Texture2D" uid="uid://bvrw8c5o0ntug" path="res://design/ui/brush_tip_large.png" id="30_6ahj7"]
[ext_resource type="Texture2D" uid="uid://dr0vrc3l6oquw" path="res://design/ui/brush_tip_med_selected.png" id="30_67url"]
[ext_resource type="Script" path="res://design/ui/custom_color_picker.gd" id="31_ah5hg"]
[ext_resource type="Texture2D" uid="uid://c366ywdrcbkj7" path="res://design/ui/brush_tip_large_selected.png" id="32_qh3u5"]
[ext_resource type="Script" path="res://design/ui/custom_slider_scale.gd" id="33_g7o63"]
[ext_resource type="Texture2D" uid="uid://b8dex6ep6mmse" path="res://design/ui/grid_tex_repeat.png" id="34_atgvn"]
[ext_resource type="StyleBox" uid="uid://ctk8lnp2rryqf" path="res://design/theme/slider_scales/slider_over_x3.tres" id="35_mns8k"]

[node name="leafmaker" type="Node"]
script = ExtResource("2")
leaf_texture_default = ExtResource("9")

[node name="canvas" type="Node2D" parent="."]
script = ExtResource("1")
leaf_point_object = ExtResource("3_w3m6b")
node_scale = Vector2(0.2, 0.2)
vein_texture = ExtResource("5_rh8kf")

[node name="Polygon2D" type="Polygon2D" parent="canvas"]
visible = false

[node name="Line2D" type="Line2D" parent="canvas"]
visible = false
position = Vector2(-11, 9)
width = 20.0
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 20

[node name="LeafOrigin" type="Sprite2D" parent="canvas"]
position = Vector2(512, 450)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4")

[node name="Area2D" type="Area2D" parent="canvas"]
collision_layer = 8
collision_mask = 8
input_pickable = false
script = ExtResource("7_5xsp6")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="canvas/Area2D"]

[node name="Math" type="Node" parent="canvas"]
script = ExtResource("8_jcn1r")

[node name="ui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("7")
script = ExtResource("5")

[node name="main_controls" type="HBoxContainer" parent="ui"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.902
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.0799561
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Symmetry" type="CheckButton" parent="ui/main_controls"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme = ExtResource("7")
theme_type_variation = &"empty_toggle"
icon = ExtResource("11_fbcbf")
icon_alignment = 1
expand_icon = true
script = ExtResource("12_it2pa")
unchecked = ExtResource("11_fbcbf")
checked = ExtResource("13_fi3m0")

[node name="Color" type="Button" parent="ui/main_controls"]
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("14_uin86")
icon_alignment = 1
expand_icon = true

[node name="Mode" type="OptionButton" parent="ui/main_controls"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
item_count = 3
selected = 0
popup/item_0/text = "Add Mode"
popup/item_0/id = 0
popup/item_1/text = "Edit Mode"
popup/item_1/id = 1
popup/item_2/text = "Delete Mode"
popup/item_2/id = 2

[node name="Add_Mode" type="CheckButton" parent="ui/main_controls"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_type_variation = &"empty_toggle"
icon = ExtResource("15_ur4ru")
icon_alignment = 1
expand_icon = true
script = ExtResource("12_it2pa")
unchecked = ExtResource("15_ur4ru")
checked = ExtResource("16_0feru")

[node name="Move_Mode" type="CheckButton" parent="ui/main_controls"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_type_variation = &"empty_toggle"
icon = ExtResource("15_ur4ru")
icon_alignment = 1
expand_icon = true
script = ExtResource("12_it2pa")
unchecked = ExtResource("19_svng3")
checked = ExtResource("20_p7wbl")

[node name="Remove_Mode" type="CheckButton" parent="ui/main_controls"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_type_variation = &"empty_toggle"
icon = ExtResource("15_ur4ru")
icon_alignment = 1
expand_icon = true
script = ExtResource("12_it2pa")
unchecked = ExtResource("17_qi3ng")
checked = ExtResource("18_0032b")

[node name="SymmetryLine" type="TextureRect" parent="ui"]
visible = false
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.82
offset_left = -4.0
offset_right = 4.0
offset_bottom = -3.05176e-05
texture = ExtResource("8")
stretch_mode = 1

[node name="table" type="Control" parent="ui"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 0.847
offset_bottom = 0.143982
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="ui/table"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.380392, 0.313726, 0.466667)

[node name="coloring" type="Control" parent="ui"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("12_a3032")
brush_tip_textures = Array[Texture2D]([ExtResource("13_tcdno"), ExtResource("14_qxpf8"), ExtResource("15_5l1ma")])

[node name="HBoxContainer" type="HBoxContainer" parent="ui/coloring"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.911
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.439941
grow_horizontal = 2
grow_vertical = 0

[node name="done_color" type="Button" parent="ui/coloring/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("26_3glcn")
icon_alignment = 1
expand_icon = true

[node name="brush_size_12" type="CheckButton" parent="ui/coloring/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_type_variation = &"empty_toggle"
icon = ExtResource("27_0qvjx")
icon_alignment = 1
expand_icon = true
script = ExtResource("12_it2pa")
unchecked = ExtResource("27_0qvjx")
checked = ExtResource("28_5hrpl")

[node name="brush_size_24" type="CheckButton" parent="ui/coloring/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_type_variation = &"empty_toggle"
icon = ExtResource("29_358l8")
icon_alignment = 1
expand_icon = true
script = ExtResource("12_it2pa")
unchecked = ExtResource("29_358l8")
checked = ExtResource("30_67url")

[node name="brush_size_48" type="CheckButton" parent="ui/coloring/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_type_variation = &"empty_toggle"
icon = ExtResource("30_6ahj7")
icon_alignment = 1
expand_icon = true
script = ExtResource("12_it2pa")
unchecked = ExtResource("30_6ahj7")
checked = ExtResource("32_qh3u5")

[node name="brush_opac" type="HSlider" parent="ui/coloring"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.86
anchor_right = 0.765
anchor_bottom = 0.912
offset_top = 0.399963
offset_right = -0.100037
offset_bottom = -2.52008
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 4
value = 100.0
script = ExtResource("33_g7o63")

[node name="ColorPickerButton" type="ColorPickerButton" parent="ui/coloring"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.796
anchor_top = 0.858
anchor_right = 1.0
anchor_bottom = 0.908
offset_left = 0.159973
offset_top = 0.319946
offset_bottom = 0.319946
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
text = "Select Color"
color = Color(1, 1, 1, 1)
script = ExtResource("31_ah5hg")
stylebox = ExtResource("35_mns8k")

[node name="opac_display" type="TextureRect" parent="ui/coloring/ColorPickerButton"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 7.0
offset_right = -8.0
offset_bottom = -8.0
mouse_filter = 2
texture = ExtResource("34_atgvn")
stretch_mode = 1

[connection signal="color_bounds" from="canvas" to="ui/coloring" method="_on_canvas_color_bounds"]
[connection signal="ready" from="canvas" to="." method="_on_canvas_ready"]
[connection signal="update_canvas_tex" from="canvas" to="ui/coloring" method="load_texture"]
[connection signal="area_entered" from="canvas/Area2D" to="canvas/Area2D" method="_on_body_entered"]
[connection signal="area_exited" from="canvas/Area2D" to="canvas/Area2D" method="_on_body_exited"]
[connection signal="body_entered" from="canvas/Area2D" to="canvas/Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="canvas/Area2D" to="canvas/Area2D" method="_on_body_exited"]
[connection signal="mode_changed" from="ui" to="canvas" method="_on_ui_mode_changed"]
[connection signal="ready" from="ui" to="." method="_on_ui_ready"]
[connection signal="resized" from="ui" to="canvas" method="_on_ui_resized"]
[connection signal="resized" from="ui" to="ui" method="_on_resized"]
[connection signal="symmetry" from="ui" to="canvas" method="_on_ui_symmetry"]
[connection signal="update_table_constraints" from="ui" to="canvas" method="_on_ui_update_table_constraints"]
[connection signal="toggled" from="ui/main_controls/Symmetry" to="ui" method="_on_symmetry_toggled"]
[connection signal="pressed" from="ui/main_controls/Color" to="ui" method="_on_color_pressed"]
[connection signal="item_selected" from="ui/main_controls/Mode" to="canvas" method="_on_Mode_item_selected"]
[connection signal="item_selected" from="ui/main_controls/Mode" to="ui" method="_on_mode_item_selected"]
[connection signal="pressed" from="ui/main_controls/Add_Mode" to="canvas" method="_on_Mode_item_selected" binds= [0]]
[connection signal="pressed" from="ui/main_controls/Add_Mode" to="ui" method="_on_mode_item_selected" binds= [0]]
[connection signal="pressed" from="ui/main_controls/Move_Mode" to="canvas" method="_on_Mode_item_selected" binds= [1]]
[connection signal="pressed" from="ui/main_controls/Move_Mode" to="ui" method="_on_mode_item_selected" binds= [1]]
[connection signal="pressed" from="ui/main_controls/Remove_Mode" to="canvas" method="_on_Mode_item_selected" binds= [2]]
[connection signal="pressed" from="ui/main_controls/Remove_Mode" to="ui" method="_on_mode_item_selected" binds= [2]]
[connection signal="gui_input" from="ui/table" to="canvas" method="_on_table_gui_input"]
[connection signal="apply_brush_image" from="ui/coloring" to="canvas" method="_on_coloring_apply_brush_image"]
[connection signal="display_brush_image" from="ui/coloring" to="canvas" method="_on_coloring_display_brush_image"]
[connection signal="pressed" from="ui/coloring/HBoxContainer/done_color" to="ui" method="_on_done_color_pressed"]
[connection signal="pressed" from="ui/coloring/HBoxContainer/brush_size_12" to="ui/coloring" method="_on_brush_size_pressed" binds= [12]]
[connection signal="pressed" from="ui/coloring/HBoxContainer/brush_size_24" to="ui/coloring" method="_on_brush_size_pressed" binds= [24]]
[connection signal="pressed" from="ui/coloring/HBoxContainer/brush_size_48" to="ui/coloring" method="_on_brush_size_pressed" binds= [48]]
[connection signal="value_changed" from="ui/coloring/brush_opac" to="ui/coloring" method="_on_brush_opac_value_changed"]
[connection signal="color_changed" from="ui/coloring/ColorPickerButton" to="ui/coloring" method="_on_color_picker_button_color_changed" flags=18]
[connection signal="popup_closed" from="ui/coloring/ColorPickerButton" to="ui/coloring" method="_on_color_picker_button_popup_closed" flags=18]
